@@ -6,6 +6,8 @@ import org.example.service.CategoryService;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class CategoryServiceTest {
@@ -18,10 +20,10 @@ public class CategoryServiceTest {
         final String name = "category";
         final String description = "category";
 
-        Category expected = new Category(name, description, List.of(), List.of());
+        Category expected = new Category(name, description, new ArrayList<>(), new ArrayList<>());
 
         //when
-        Category result = categoryService.createCategory();
+        Category result = categoryService.createCategory(name, description);
 
         //then.
         Assertions.assertEquals(expected,result);
@@ -37,7 +39,7 @@ public class CategoryServiceTest {
         Product expected = new Product(name, price, quantity);
 
         //when
-        Product result = categoryService.createProduct();
+        Product result = categoryService.createProduct(name, price, quantity);
 
         //then.
          Assertions.assertEquals(expected,result);
@@ -51,13 +53,18 @@ public class CategoryServiceTest {
         final String oldDescription = "category";
         final String newDescription = "new category";
 
-        Category expected = new Category(name, newDescription, List.of(), List.of());
 
+        Category oldCategory = new Category(name, oldDescription, new ArrayList<>(), new ArrayList<>());
+        Category expected = new Category(name, newDescription, new ArrayList<>(), new ArrayList<>());
+
+        ArrayList<Category> categories = new ArrayList<>();
+        categories.add(oldCategory);
+        Category mainCategory = new Category("","", categories, List.of());
         //when
-        Category result = categoryService.updateCategory();
+        Category result = categoryService.updateCategory(mainCategory, new ArrayList<>(), name, expected);
 
         //then.
-         Assertions.assertEquals(expected,result);
+         Assertions.assertEquals(expected,result.categories().get(0));
     }
 
     @Test
@@ -68,13 +75,19 @@ public class CategoryServiceTest {
         final int quantity = 5;
         final int newquantity = 15;
 
+        Product oldProduct = new Product(name, price, quantity);
+        List<Product> list = new ArrayList<>();
+        list.add(oldProduct);
+        Category oldCategory = new Category(name, "description", new ArrayList<>(), list);
+
         Product expected = new Product(name, price, newquantity);
 
         //when
-        Product result = categoryService.updateProduct();
+        Category result = categoryService.updateProduct(oldCategory, new ArrayList<>(), name, expected);
 
         //then.
-         Assertions.assertEquals(expected,result);
+         Assertions.assertEquals(1,result.products().size());
+         Assertions.assertEquals(expected,result.products().get(0));
 
     }
 
@@ -82,16 +95,19 @@ public class CategoryServiceTest {
     public void deleteCategory(){
 
         //given
-        Category categoryToDelete = new Category("alive", "to Delete", List.of(), List.of());
-        Category keep = new Category("side", "to Keep", List.of(), List.of());
-        Category initial = new Category("top", "top category", List.of(keep,categoryToDelete), List.of());
-        Category expected = new Category("top", "top category", List.of(keep), List.of());
+        Category categoryToDelete = new Category("alive", "to Delete", new ArrayList<>(), new ArrayList<>());
+        Category keep = new Category("side", "to Keep", new ArrayList<>(), new ArrayList<>());
+        List<Category> initialList = new ArrayList<>();
+        initialList.add(keep);
+        initialList.add(categoryToDelete);
+        Category initial = new Category("top", "top category", initialList, new ArrayList<>());
+        Category expected = new Category("top", "top category", Arrays.asList(keep), new ArrayList<>());
 
         //when
-        Category result = categoryService.deleteCategory();
+        Category result = categoryService.deleteCategory(initial,List.of(), "alive");
 
         //then.
-         Assertions.assertEquals(expected,result);
+        Assertions.assertEquals(expected,result);
     }
 
     @Test
@@ -100,11 +116,14 @@ public class CategoryServiceTest {
         //given
         Product productToDelete = new Product("alive", 0.35f, 4);
         Product keep = new Product("side", 2.3f, 0);
-        Category initial = new Category("top", "to Delete", List.of(), List.of(productToDelete,keep));
-        Category expected = new Category("top", "top category", List.of(), List.of(keep));
+        List<Product> initialList = new ArrayList<>();
+        initialList.add(keep);
+        initialList.add(productToDelete);
+        Category initial = new Category("top", "top category", new ArrayList<>(), initialList);
+        Category expected = new Category("top", "top category", new ArrayList<>(), Arrays.asList(keep));
 
         //when
-        Category result = categoryService.deleteProduct();
+        Category result = categoryService.deleteProduct(initial, new ArrayList<>(), "alive");
 
         //then.
          Assertions.assertEquals(expected,result);
@@ -113,13 +132,17 @@ public class CategoryServiceTest {
     @Test
     public void linkTwoCategory(){
         //given
-        Category categoryToAdd = new Category("alive", "to Add", List.of(), List.of());
-        Category keep = new Category("side", "to Keep", List.of(), List.of());
-        Category initial = new Category("top", "top category", List.of(keep), List.of());
-        Category expected = new Category("top", "top category", List.of(keep,categoryToAdd), List.of());
+
+
+        Category categoryToAdd = new Category("alive", "to Add", new ArrayList<>(), new ArrayList<>());
+        Category keep = new Category("side", "to Keep", new ArrayList<>(), new ArrayList<>());
+        List<Category> initialList = new ArrayList<>();
+        initialList.add(keep);
+        Category initial = new Category("top", "top category", initialList, new ArrayList<>());
+        Category expected = new Category("top", "top category", Arrays.asList(keep,categoryToAdd), new ArrayList<>());
 
         //when
-        Category result = categoryService.linkCategory();
+        Category result = categoryService.linkCategory(initial, new ArrayList<>(), categoryToAdd);
 
         //then.
          Assertions.assertEquals(expected,result);
@@ -131,11 +154,13 @@ public class CategoryServiceTest {
         //given
         Product productToAdd = new Product("alive", 0.35f, 4);
         Product keep = new Product("side", 2.3f, 0);
-        Category initial = new Category("top", "to Delete", List.of(), List.of(keep));
-        Category expected = new Category("top", "top category", List.of(), List.of(keep, productToAdd));
+        List<Product> initialList = new ArrayList<>();
+        initialList.add(keep);
+        Category initial = new Category("top", "top category", new ArrayList<>(), initialList);
+        Category expected = new Category("top", "top category", new ArrayList<>(),Arrays.asList(keep, productToAdd));
 
         //when
-        Category result = categoryService.linkProduct();
+        Category result = categoryService.linkProduct(initial, new ArrayList<>(), productToAdd);
 
         //then.
          Assertions.assertEquals(expected,result);
